--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
             <div class="hero-image" data-aos="fade-left">
                 <div class="image-container">
-                    <img src="images/profile.sadaf.jpeg" alt="Mirza Waseem Baig - Web Developer">
+                    <img src="profile.sadaf.jpeg" alt="Mirza Waseem Baig - Web Developer">
                     <div class="image-overlay"></div>
                 </div>
             </div>
@@ -424,4 +424,5 @@
     <!-- External JavaScript -->
     <script src="script.js"></script>
 </body>
+
 </html>
